HelpSource/scdoc.css
body {
    font-family: Helvetica, Arial, sans-serif;
    font-size: 10pt;
    color: black;
    background: white;
/*    max-width: 60em;*/
/*    margin-left: 20em;*/
    margin: 0;
}

html {
    height: 100%;
    margin: 0 0 1px;
}

div.contents {
    padding-left: 0.3em;
    padding-right: 0.3em;
    padding-top: 1.5em;
    padding-bottom: 0.5em;
}

table {
    border-collapse: collapse;
    font-size: 10pt;
    margin-top: 1em;
    margin-left: 2em;
}
table td {
    border: 1px solid #ddd;
    padding: 0.3em;
}

table table {
    margin: 0em;
}

p {
    margin-top: 1em;
    margin-bottom: 0.3em;
}

a:link, a:visited, a:hover {
    text-decoration: none;
    color: #449;
    /* add padding to work around "text-decoration: underline" not
     * having effect when hovered if font size less then 11pt */
    padding-bottom: 1px;
}

a:hover {
    text-decoration: underline;
}

#inheritedclassmets, #inheritedinstmets {

}

.inheritedmets_class {
    font-weight: bold;
    color: #555;
    margin-top: 0.5em;
    margin-bottom: 0.25em;
}
.inheritedmets_class a {
    color: #333;
}
ul.inheritedmets {
    list-style: none;
    padding: 0;
    margin: 0;
    margin-left: 2em;
    margin-top: 0.25em;
}
ul.inheritedmets li {
    font-family: monospace;
}
a.inheritedmets_toggle {
    font-size: 9pt;
    color: #558;
    font-weight: normal;
/*    margin-left: 2em;*/
}

a.inheritedmets_toggle:hover {
    text-decoration: none;
    color: #000;
}

a.subclass_toggle {
    color: #555;
    font-weight: normal;
}

a.subclass_toggle:hover {
    text-decoration: none;
    color: #000;
}


#menubar {
    font-family: Arial, Helvetica, sans-serif;
    width: 100%;
    position: fixed;
/*    background: #555;*/
    background: #eee;
    top: 0px;
    padding: 2px;
    margin: 0px;
    border-bottom: 1px solid #bbb;
/*    border-bottom: 2px solid #999;*/
    z-index: 30;
}

#menubar .menuitem {
    list-style: none;
    float:left;
    margin:0;
    padding:0px;
    padding-left: 0.75em;
    padding-right: 0.75em;
/*    border-right: 1px solid #999;*/
    border-right: 1px solid #ddd;
    font-size: 10pt;
    display: block;
}

.menuitem a {
/*    color: #ddd;*/
    color: #666;
}
.menuitem a:hover {
    text-decoration: none;
    color: black;
}

#topdoctitle {
/*    font-weight: bold;*/
    font-style: italic;
/*    color: #fff;*/
    color: #444;
    cursor: pointer;
}

.submenu {
    margin-top: 2px;
    padding: 0.5em;
    background: #eee;
    display: none;
    position: absolute;
    border: 1px solid #aaa;
    border-radius: 4px;
}

.submenu a {
        position: relative;
		display: block;
		margin: 0;
/*		padding: 5px 10px;*/
        padding: 0.2em;
		width: auto;
		white-space: nowrap;
		text-align: left;
/*		text-decoration: none;*/
		color: #447;
		font-weight: bold;
}

.toc_search {
    margin-left: 10px;
    color: #999;
    font-size: 9pt;
}

.top_search input {
    border: 1px solid #ddd;
}

a.navlink {
/*    color: #fff;*/
    color: #447;
    font-weight: bold;
}


.header {
  border-bottom: 2.5px solid #000; padding-bottom:0.18em;
}

#label {
    color: #666;
    font-size: 0.9em;
}

#summary {
    font-weight: normal;
    font-size: 1.1em;
}
#related {
    text-align: right;
    font-weight: bold;
    margin-top: 0.5em;
}
#filename {
    word-break: break-all;
}
.headerimage {
    float: right;
    margin-right: 1ex;
}

.extension-indicator-ctr {
    float: right;
    font-size: 12pt;
    padding: 0.4em 0.4em 0.2em 0.4em;
    background-color: #601c8b;
    color: white;
    border-radius: 3px;
    border-bottom: 2px solid #39174F;
}

.extension-indicator-icon {
    height: 1em;
    margin-right: 0.5em;
}

.extension-indicator-text {
    line-height: 1em;
}

.subheader {
    text-align: right;
    font-size: 9pt;
    color: #444;
}

.jump {
    text-align: right;
    font-size: 9pt;
    color: #555;
}
.jump a {
    font-weight: bold;
    padding-top:0;
    margin-top:0;
}

a.footnote {
    font-size: 9pt;
    top: -0.1em;
}
div.footnotes {
    border-top: 1px solid #aaa;
    margin-left: 2em;
    margin-top: 3em;
    margin-right: 2em;
}
div.footnote {
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    font-size: 9pt;
}

.soft {
    color: #777;
}

h1 {
    margin: 0.1em 0;
    font-size: 2.6em;
    margin-bottom: 0em;
}

h2 {
    border-bottom: 1px solid #ddd;
    margin-top: 1.0em;
    text-align: left;
    margin-bottom: 2px;
    font-size: 1.6em;
}

h3 {
    margin-top: 2.0em;
    margin-bottom: 1px;
    text-align: left;
    font-size: 1.0em;
    font-weight: 600;
}

h4 {
    margin-top: 1em;
    margin-bottom: 0em;
    margin-left: 0em;
    color: #777;
}

dt {
    font-weight: bold;
}
dd {
    margin-top: 0.25em;
    margin-bottom: 1.25em;
}

code, pre {
    font-family: monospace;
    font-size: 9pt;
}

pre {
    border-left: 2px solid #e0e0e0;
    padding-left: 1em;
}

code.code, pre.code {
}

pre.code {

}

.image {
    text-align: center;
    margin: 2em;
    font-size: 9pt;
}

.image img {
    margin-bottom: 1em;
}

.methprefix {
    font-weight: normal;
    color: #777;
    padding-right: 0.5em;
    margin-left: -1em;
}

.method-code {
    font-family: monospace;
    font-weight: normal;
    font-size: 1.05em !important;
    margin-bottom: 0em;
    margin-top: 0.75em;
    padding: 0.25em;
    border: none;
    padding-left: 4em;
    text-indent: -4em;
}

a.method-name {
    color: black;
    font-weight: bold;
}

.method {
    margin-left: 2em;
    margin-bottom: 3.5em;
}

.argstr {
    white-space: nowrap;
}

.extmethod {
    font-size: 9pt;
    color: #444;
    padding-left: 0.2em;
    text-align: left;
}

.supmethod {
    font-size: 9pt;
    color: #777;
    padding-left: 0.2em;
}

table.arguments {
    margin-left: 1.5em;
    margin-bottom: 0em;
    margin-top: 0.5em;
    border-collapse: collapse;
}

table.arguments td.argumentname, td.argumentdesc {
    vertical-align: top;
    border: none;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}
/* ... */

